Added exponential back off

--- a/hermes/src/main/AndroidManifest.xml
+++ b/hermes/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
             android:enabled="true"
             android:exported="true" >
         </receiver>
+        <receiver
+            android:name=".receivers.ExponentialBackoffReceiver"
+            android:enabled="true"
+            android:exported="true" >
+        </receiver>
     </application>
 
 </manifest>
