Added to Maven Central

--- a/hermesexample/build.gradle
+++ b/hermesexample/build.gradle
@@ -19,8 +19,12 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile project(":hermes");
+    compile 'in.raveesh:hermes:0.1.0-SNAPSHOT'
 }
