--- a/hermes/build.gradle
+++ b/hermes/build.gradle
@@ -22,3 +22,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services-gcm:7.0.0'
 }
+
+apply from: "../maven.gradle"
