--- a/hermesexample/build.gradle
+++ b/hermesexample/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'in.raveesh:hermes:0.1.0-SNAPSHOT'
+    compile project(path: ':gcmendpoint', configuration: 'android-endpoints')
 }
