--- a/hermesexample/src/main/AndroidManifest.xml
+++ b/hermesexample/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
     <permission
         android:name="in.raveesh.hermesexample.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
