--- a/hermesexample/build.gradle
+++ b/hermesexample/build.gradle
@@ -26,6 +26,6 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'in.raveesh:hermes:0.1.0-SNAPSHOT'
+    compile project(":hermes")
     compile project(path: ':gcmendpoint', configuration: 'android-endpoints')
 }
