--- a/hermesexample/src/main/AndroidManifest.xml
+++ b/hermesexample/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="in.raveesh.hermesexample">
+    package="in.raveesh.hermesexample" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <permission
@@ -15,12 +14,18 @@
 
     <uses-permission android:name="in.raveesh.hermesexample.permission.C2D_MESSAGE" />
 
+    <permission
+        android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +36,7 @@
         <receiver
             android:name=".GcmBroadcastReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
@@ -39,7 +44,11 @@
                 <category android:name="in.raveesh.hermesexample" />
             </intent-filter>
         </receiver>
-        <service android:name=".GcmIntentService" android:exported="true" android:enabled="true"/>
+
+        <service
+            android:name=".GcmIntentService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
