Included HermesIntentService which handles messages. Changed HermesBroadcastReceiver to WakefulBroadcastReceiver

--- a/hermesexample/src/main/AndroidManifest.xml
+++ b/hermesexample/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
                 <category android:name="in.raveesh.hermesexample" />
             </intent-filter>
         </receiver>
+
+        <service android:name=".GcmIntentService"
+                 android:enabled="true"/>
     </application>
 
 </manifest>
