--- a/hermes/src/main/AndroidManifest.xml
+++ b/hermes/src/main/AndroidManifest.xml
@@ -5,13 +5,9 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name" >
+        <!-- TODO: Move to HermesBroadcastReceiver -->
         <receiver
             android:name=".receivers.RebootReceiver"
-            android:enabled="true"
-            android:exported="true" >
-        </receiver>
-        <receiver
-            android:name=".receivers.HermesBroadcastReceiver"
             android:enabled="true"
             android:exported="true" >
         </receiver>
