--- a/hermesexample/build.gradle
+++ b/hermesexample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "in.raveesh.hermesexample"
         minSdkVersion 9
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -25,6 +25,8 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'in.raveesh:hermes:0.1.0-SNAPSHOT'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+//    compile 'in.raveesh:hermes:0.1.0-SNAPSHOT'
+
+    compile project (':hermes') // For Development
 }
